Finished mobile menu styles and responsiveness

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>FAB FOREVER | Your 3D printing roundup resource!</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/media.css">
@@ -10,8 +11,8 @@
 <body>
     <!--HEADER START-->
     <nav class="headerbar">
-        <div class="headerbar__logo">
-            <img src="/img/fab-forever-logo.svg">
+        <div class="headerbar__images">
+            <img class="headerbar__logo" src="/img/fab-forever-logo.svg">
             <img class="headerbar__mobile" src="/img/bars-solid.svg">
         </div>
         <!--DESKTOP MENU START-->
