Landing page at 90%
TODO:
- Refactor classes for easier use
- Group redundant styles
- Add content
- Responsive

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
@@ -7,17 +8,18 @@
     <title>FAB FOREVER | Your 3D printing roundup resource!</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/media.css">
+    <link rel="stylesheet" type="text/css" href="css/fonts.css">
 </head>
+
 <body>
-    <!--HEADER START-->
+    <!--RESPONSIVE HEADER START-->
     <nav class="headerbar">
         <div class="headerbar__images">
             <img class="headerbar__logo" src="/img/fab-forever-logo.svg">
             <img class="headerbar__mobile" src="/img/bars-solid.svg">
         </div>
-        <!--DESKTOP MENU START-->
         <div class="headerbar__nav closed">
-            <img class="headerbar__mobile--close" src="/img/xmark-solid.svg">
+            <img class="headerbar__mobile--close" src="/img/xmark-solid.svg" aria-label="open mobile menu">
             <ul>
                 <li><a href="#">BASICS</a></li>
                 <li><a href="#">MATERIALS</a></li>
@@ -25,9 +27,71 @@
                 <li><a href="#">HELP</a></li>
             </ul>
         </div>
-        <!--DESKTOP MENU END-->
     </nav>
-    <!--HEADER END-->
+    <!--RESPONSIVE HEADER END-->
+
+    <!--HERO SECTION START-->
+    <section class="hero">
+        <div class="hero__mask">
+            <div class="hero__container">
+                <div class="hero__container--left">
+                    <h1 class="headline">
+                        <span>NEW</span> to 3D Printing?
+                    </h1>
+                    <p>
+                        Bring your ideas to life with our comprehensive roundup!
+                    </p>
+                    <button class="cta">
+                        GET STARTED!
+                    </button>
+                </div>
+                <div class="hero__container--right">
+                    <img src="/img/hero-section-3d-printer-illustration.svg">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--HERO SECTION END-->
+
+    <!--RESOURCES SECTION START-->
+    <section class="resources">
+        <div class="resources__container">
+            <img class="top-divider" src="/img/shape-divider-top.svg">
+            <div class="resources__container--left">
+                <h2><span>3D</span> Printing resources for you</h2>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                <img class="bottom-divider" src="/img/shape-divider-bottom.svg">
+            </div>
+            <div class="resources__container--right"></div>
+        </div>
+    </section>
+    <!--RESOURCES SECTION END-->
+
+    <!--TESTIMONIAL SECTION START-->
+    <section class="testimonial">
+        <div class="testimonial__container">
+            <div class="testimonial__container--left">
+                <h2><span>TESTI</span>MONIAL</h2>
+            </div>
+            <div class="testimonial__container--right"></div>
+        </div>
+    </section>
+    <!--TESTIMONIAL SECTION END-->
+
+    <!--KNOWLEDGE SECTION START-->
+    <section class="knowledge">
+        <div class="knowledge__container">
+            <img class="knowledge--top-divider" src="/img/shape-divider-top.svg">
+            <div class="knowledge__container--left">
+                <h2><span>3D</span> Printing resources for you</h2>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                <img class="knowledge--bottom-divider" src="/img/shape-divider-bottom.svg">
+            </div>
+            <div class="knowledge__container--right"></div>
+        </div>
+    </section>
+    <!--KNOWÖEDGE SECTION END-->
     <script src="/js/mobile-menu.js"></script>
 </body>
+
 </html>
