Changed img and font paths to "/assets/fonts/..."
- added external tools to readme
- fixed responsive layout for section 1 to 3

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <!--RESPONSIVE HEADER START-->
     <nav class="headerbar">
         <div class="headerbar__images">
-            <img class="headerbar__logo" src="/img/fab-forever-logo.svg">
-            <img class="headerbar__mobile" src="/img/bars-solid.svg">
+            <img class="headerbar__logo" src="/assets/img/fab-forever-logo.svg">
+            <img class="headerbar__mobile" src="/assets/img/bars-solid.svg">
         </div>
         <div class="headerbar__nav closed">
-            <img class="headerbar__mobile--close" src="/img/xmark-solid.svg" aria-label="open mobile menu">
+            <img class="headerbar__mobile--close" src="/assets/img/xmark-solid.svg" aria-label="open mobile menu">
             <ul>
                 <li><a href="#">BASICS</a></li>
                 <li><a href="#">MATERIALS</a></li>
@@ -31,67 +31,58 @@
     <!--RESPONSIVE HEADER END-->
 
     <!--HERO SECTION START-->
-    <section class="hero">
-        <div class="hero__mask">
-            <div class="hero__container">
-                <div class="hero__container--left">
-                    <h1 class="headline">
-                        <span>NEW</span> to 3D Printing?
-                    </h1>
-                    <p>
-                        Bring your ideas to life with our comprehensive roundup!
-                    </p>
-                    <button class="cta">
-                        GET STARTED!
-                    </button>
-                </div>
-                <div class="hero__container--right">
-                    <img src="/img/hero-section-3d-printer-illustration.svg">
-                </div>
+    <section class="section-100-100 section-100-100--bg-gradient flex">
+        <div class="container-100-1 flex">
+            <div class="container-50-2">
+                <h1 class="text-shadow"><span class="strong-font">NEW</span> to 3D Printing?</h1>
+                <p>Bring your ideas to life with our comprehensive roundup!</p>
+                <button class="cta box-shadow cta--text">
+                    GET STARTED!
+                </button>
+            </div>
+            <div class="container-50-2">
+                <img src="/assets/img/hero-section-3d-printer-illustration.svg">
             </div>
         </div>
     </section>
     <!--HERO SECTION END-->
 
-    <!--RESOURCES SECTION START-->
-    <section class="resources">
-        <div class="resources__container">
-            <img class="top-divider" src="/img/shape-divider-top.svg">
-            <div class="resources__container--left">
-                <h2><span>3D</span> Printing resources for you</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                <img class="bottom-divider" src="/img/shape-divider-bottom.svg">
+    <!--ABOUT SECTION START-->
+    <section class="section-100-100 section-100-100--gradient section-100-100--space position--rel section-100-100--mobile">
+        <div class="shape-divider--top">
+            <img src="/assets/img/shape-divider-top.svg">
+        </div>
+        <div class="container-100-1 position--abs position-abs__center container-100-1--mobile flex">
+            <div class="container-50-2">
+                <h2 class="text-shadow text--white margin-top--mobile"><span class="strong-font">3D</span>Printing resources for you!</h2>
+                <p class="text--white margin--top">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                </p>
             </div>
-            <div class="resources__container--right"></div>
+            <div class="container-50-2 grid grid-container">
+                <div class="grid-card grid-card__background--basics box-shadow strong-font"><h3>BASICS</h3></div>
+                <div class="grid-card grid-card__background--models box-shadow strong-font"><h3>MODELS</h3></div>
+                <div class="grid-card grid-card__background--help box-shadow strong-font"><h3>HELP</h3></div>
+                <div class="grid-card grid-card__background--materials box-shadow strong-font"><h3>MATERIALS</h3></div>
+            </div>
+        </div>
+        <div class="shape-divider--bottom">
+            <img src="/assets/img/shape-divider-bottom.svg">
         </div>
     </section>
-    <!--RESOURCES SECTION END-->
+    <!--ABOUT SECTION END-->
 
     <!--TESTIMONIAL SECTION START-->
-    <section class="testimonial">
-        <div class="testimonial__container">
-            <div class="testimonial__container--left">
-                <h2><span>TESTI</span>MONIAL</h2>
+    <section class="section-100-25">
+        <div class="container-100-1 flex">
+            <div class="container-50-2">
+                <h2 class="text-shadow"><span class="strong-font">TESTI</span>MONIAL</h2>
             </div>
-            <div class="testimonial__container--right"></div>
+            <div class="container-50-2"></div>
         </div>
     </section>
     <!--TESTIMONIAL SECTION END-->
 
-    <!--KNOWLEDGE SECTION START-->
-    <section class="knowledge">
-        <div class="knowledge__container">
-            <img class="knowledge--top-divider" src="/img/shape-divider-top.svg">
-            <div class="knowledge__container--left">
-                <h2><span>3D</span> Printing resources for you</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                <img class="knowledge--bottom-divider" src="/img/shape-divider-bottom.svg">
-            </div>
-            <div class="knowledge__container--right"></div>
-        </div>
-    </section>
-    <!--KNOWÖEDGE SECTION END-->
-    <script src="/js/mobile-menu.js"></script>
+       <script src="/js/mobile-menu.js"></script>
 </body>
 
 </html>
