Fix: wrong file paths for assets

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!--RESPONSIVE HEADER START-->
     <nav class="headerbar">
         <div class="headerbar__images">
-            <img class="headerbar__logo" src="/assets/img/fab-forever-logo.svg">
-            <img class="headerbar__mobile" src="/assets/img/bars-solid.svg">
+            <img class="headerbar__logo" src="assets/img/fab-forever-logo.svg">
+            <img class="headerbar__mobile" src="assets/img/bars-solid.svg">
         </div>
         <div class="headerbar__nav closed">
-            <img class="headerbar__mobile--close" src="/assets/img/xmark-solid.svg" aria-label="open mobile menu">
+            <img class="headerbar__mobile--close" src="assets/img/xmark-solid.svg" aria-label="open mobile menu">
             <ul>
                 <li><a href="#">BASICS</a></li>
                 <li><a href="#">MATERIALS</a></li>
@@ -42,7 +42,7 @@
                 </button>
             </div>
             <div class="column-2 column-2-xs">
-                <img src="/assets/img/hero-section-3d-printer-illustration.svg">
+                <img src="assets/img/hero-section-3d-printer-illustration.svg">
             </div>
         </div>
     </section>
@@ -61,7 +61,7 @@
                 <h2 class="text-shadow"><span>TESTI</span>MONIAL</h2>
             </div>
             <div class="column-2 column-2-xs flex-center box-shadow rounded testimonial-card">
-                <img src="/assets/img/testimonial-slider-asian-dude.webp">
+                <img src="assets/img/testimonial-slider-asian-dude.webp">
                 <div>
                     <p class="testimonial-text">"Jeez. This got me up and running for a course!"</p>
                     <p><i>Kaneda Yamagata - CTO MeshBash</i></p>
