Fix: change js path in html from /js to assets/js/..

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
     </footer>
     <!--FOOTER END-->
-    <script src="/js/mobile-menu.js" defer></script>
+    <script src="assets/js/mobile-menu.js" defer></script>
 </body>
 
 </html>
