Change: i tag to em tag

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <img src="assets/img/testimonial-slider-asian-dude.webp">
                 <div>
                     <p class="testimonial-text">"Jeez. This got me up and running for a course!"</p>
-                    <p><i>Kaneda Yamagata - CTO MeshBash</i></p>
+                    <p><em>Kaneda Yamagata - CTO MeshBash</em></p>
                 </div>
             </div>
         </div>
