--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
 
 <body>
     <!--RESPONSIVE HEADER START-->
-    <nav class="headerbar">
-        <div class="headerbar__images">
-            <img class="headerbar__logo" src="assets/img/fab-forever-logo.svg">
-            <img class="headerbar__mobile" src="assets/img/bars-solid.svg">
-        </div>
-        <div class="headerbar__nav closed">
-            <img class="headerbar__mobile--close" src="assets/img/xmark-solid.svg" aria-label="open mobile menu">
-            <ul>
-                <li><a href="#">BASICS</a></li>
-                <li><a href="#">MATERIALS</a></li>
-                <li><a href="#">MODELS</a></li>
-                <li><a href="#">HELP</a></li>
-            </ul>
-        </div>
-    </nav>
+    <header>
+        <nav class="headerbar">
+            <div class="headerbar__images">
+                <img class="headerbar__logo" src="assets/img/fab-forever-logo.svg">
+                <img class="headerbar__mobile" src="assets/img/bars-solid.svg">
+            </div>
+            <div class="headerbar__nav closed">
+                <img class="headerbar__mobile--close" src="assets/img/xmark-solid.svg" aria-label="open mobile menu">
+                <ul>
+                    <li><a href="#">BASICS</a></li>
+                    <li><a href="#">MATERIALS</a></li>
+                    <li><a href="#">MODELS</a></li>
+                    <li><a href="#">HELP</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <!--RESPONSIVE HEADER END-->
 
     <!--HERO SECTION START-->
