Fix: flex layout for testimonial

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!--TESTIMONIAL SECTION START-->
     <section class="section-half flex flex-center">
-        <div class="container container-xs flex-center">
+        <div class="container flex container-xs flex-center">
             <div class="column-2 column-2-xs">
                 <h2 class="text-shadow"><span>TESTI</span>MONIAL</h2>
             </div>
