Fix: flex layout for testimonial card

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="column-2 column-2-xs">
                 <h2 class="text-shadow"><span>TESTI</span>MONIAL</h2>
             </div>
-            <div class="column-2 column-2-xs flex-center box-shadow rounded testimonial-card">
+            <div class="column-2 column-2-xs flex flex-center box-shadow rounded testimonial-card">
                 <img src="assets/img/testimonial-slider-asian-dude.webp">
                 <div>
                     <p class="testimonial-text">"Jeez. This got me up and running for a course!"</p>
