Add: container for contact section

--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
 
     <!--CONTACT SECTION START-->
     <section class="section-full background flex flex-center flex-column ">
-
-
+        <div class="container">
+            
+        </div>
     </section>
     <!--CONTACT SECTION END-->
 
