Add: columns for contact container

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
     <!--CONTACT SECTION START-->
     <section class="section-full background flex flex-center flex-column ">
         <div class="container">
-            
+            <div class="column-2"></div>
+            <div class="column-2"></div>
         </div>
     </section>
     <!--CONTACT SECTION END-->
