--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!--CONTACT SECTION START-->
     <section class="section-full background flex flex-center flex-column ">
         <div class="container">
-            <div class="column-2">
+            <div class="column-2 text-white">
                 <h2><span>KNOW</span>everything you need to!</h2>
             </div>
             <div class="column-2"></div>
