--- a/index.html
+++ b/index.html
@@ -76,12 +76,14 @@
 
     <!--CONTACT SECTION START-->
     <section class="section-full background flex flex-center flex-column ">
+        <img src="assets/img/shape-divider-top.svg">
         <div class="container">
             <div class="column-2 text-white text-shadow">
                 <h2><span>KNOW</span> everything you need to!</h2>
             </div>
             <div class="column-2"></div>
         </div>
+        <img src="assets/img/shape-divider-bottom.svg">
     </section>
     <!--CONTACT SECTION END-->
 
