Add: divider-space class to section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!--TESTIMONIAL SECTION END-->
 
     <!--CONTACT SECTION START-->
-    <section class="section-full background flex flex-center flex-column ">
+    <section class="section-full background flex flex-center flex-column divider-space">
         <img src="assets/img/shape-divider-top.svg">
         <div class="container">
             <div class="column-2 text-white text-shadow">
