Add: divider-bottom class to shape divider

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <div class="column-2"></div>
         </div>
-        <img class="flip-x" src="assets/img/shape-divider-bottom.svg">
+        <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg">
     </section>
     <!--CONTACT SECTION END-->
 
