Add: content to about section

--- a/index.html
+++ b/index.html
@@ -51,8 +51,15 @@
     <!--HERO SECTION END-->
 
     <!--ABOUT SECTION START-->
-    <section class="section-full background-reverse divider-space">
-
+    <section class="section-full background-reverse flex flex-center flex-column divider-space">
+        <img src="assets/img/shape-divider-top.svg">
+        <div class="container">
+            <div class="column-2 text-white text-shadow">
+                <h2><span>3D</span>Printing resources for you!</h2>
+            </div>
+            <div class="column-2"></div>
+        </div>
+        <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg">
     </section>
     <!--ABOUT SECTION END-->
 
