Add: flip-x class to top divider

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <!--ABOUT SECTION START-->
     <section class="section-full background-reverse flex flex-center flex-column divider-space">
-        <img src="assets/img/shape-divider-top.svg">
+        <img class="flip-x" src="assets/img/shape-divider-top.svg">
         <div class="container">
             <div class="column-2 text-white text-shadow">
                 <h2><span>3D</span>Printing resources for you!</h2>
