Remove: flip-x class from bottom divider

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="column-2"></div>
         </div>
-        <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg">
+        <img class="fdivider-bottom" src="assets/img/shape-divider-bottom.svg">
     </section>
     <!--ABOUT SECTION END-->
 
