--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img class="headerbar__mobile--close" src="assets/img/xmark-solid.svg" aria-label="open mobile menu">
                 <ul>
                     <li><a href="https://rebellionwebdesign.github.io/fab-forever/basics.html">BASICS</a></li>
-                    <li><a href="#">MATERIALS</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/materials.html">MATERIALS</a></li>
                     <li><a href="#">MODELS</a></li>
                     <li><a href="#">HELP</a></li>
                 </ul>
