Add: link to models nav

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul>
                     <li><a href="https://rebellionwebdesign.github.io/fab-forever/basics.html">BASICS</a></li>
                     <li><a href="https://rebellionwebdesign.github.io/fab-forever/materials.html">MATERIALS</a></li>
-                    <li><a href="#">MODELS</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/models.html">MODELS</a></li>
                     <li><a href="#">HELP</a></li>
                 </ul>
             </div>
