Add: link to help nav

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="https://rebellionwebdesign.github.io/fab-forever/basics.html">BASICS</a></li>
                     <li><a href="https://rebellionwebdesign.github.io/fab-forever/materials.html">MATERIALS</a></li>
                     <li><a href="https://rebellionwebdesign.github.io/fab-forever/models.html">MODELS</a></li>
-                    <li><a href="#">HELP</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/help.html">HELP</a></li>
                 </ul>
             </div>
         </nav>
