--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fab Forever provides useful information to people interested in 3D printing">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>FAB FOREVER | Your 3D printing roundup resource!</title>
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
