--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=1.0">
     <meta name="description" content="Fab Forever provides useful information to people interested in 3D printing">
     <meta name="keywords" content="3d printer, 3d printing, filament, 3d printing material, material, filament">
     <meta name="author" content="Daniel Stauffer">
