--- a/basics.html
+++ b/basics.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=1.0">
-    <meta name="description" content="Fab Forever provides useful information to people interested in 3D printing">
+    <meta name="description" content="The basics oage provides information on what 3d printing is">
     <meta name="keywords" content="3d printer, 3d printing, filament, 3d printing material, material, filament">
     <meta name="author" content="Daniel Stauffer">
     <meta name="apple-mobile-web-app-capable" content="yes" />
