--- a/basics.html
+++ b/basics.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=1.0">
     <meta name="description" content="The basics oage provides information on what 3d printing is">
-    <meta name="keywords" content="3d printer, 3d printing, filament, 3d printing material, material, filament">
+    <meta name="keywords" content="3d printer, how to 3d print, 3d printing, 3d printing material, material, filament">
     <meta name="author" content="Daniel Stauffer">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>FAB FOREVER | Your 3D printing roundup resource!</title>
