Add: alt text for navigation links

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <header>
         <nav class="headerbar">
             <div class="headerbar__images">
-                <img class="headerbar__logo" src="assets/img/fab-forever-logo.svg">
-                <img class="headerbar__mobile" src="assets/img/bars-solid.svg">
+                <img class="headerbar__logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo">
+                <img class="headerbar__mobile" src="assets/img/bars-solid.svg" alt="opens the mobile menu">
             </div>
             <div class="headerbar__nav closed">
-                <img class="headerbar__mobile--close" src="assets/img/xmark-solid.svg" aria-label="open mobile menu">
+                <img class="headerbar__mobile--close" src="assets/img/xmark-solid.svg" alt="closes the mobile menu" aria-label="open mobile menu">
                 <ul>
                     <li><a href="https://rebellionwebdesign.github.io/fab-forever/basics.html">BASICS</a></li>
                     <li><a href="https://rebellionwebdesign.github.io/fab-forever/materials.html">MATERIALS</a></li>
