Add: alt text for hero section image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </button>
             </div>
             <div class="column-2 column-2-xs">
-                <img src="assets/img/hero-section-3d-printer-illustration.svg">
+                <img src="assets/img/hero-section-3d-printer-illustration.svg" alt="an image of a 3d printer">
             </div>
         </div>
     </section>
