--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 
     <!--ABOUT SECTION START-->
     <section class="section-full background-reverse flex flex-center flex-column divider-space">
-        <img class="flip-x" src="assets/img/shape-divider-top.svg">
+        <img class="flip-x" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container">
             <div class="column-2 text-white text-shadow">
                 <h2><span>3D</span>Printing resources for you!</h2>
             </div>
             <div class="column-2"></div>
         </div>
-        <img class="fdivider-bottom" src="assets/img/shape-divider-bottom.svg">
+        <img class="fdivider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the bottom shape divider">
     </section>
     <!--ABOUT SECTION END-->
 
