--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <footer class="flex flex-center">
         <div class="container container-xs flex flex-center">
             <div class="column-2 column-2-xs">
-                <img class="footer-logo" src="assets/img/fab-forever-logo.svg">
+                <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p>An educational static website project</p>
             </div>
             <div class="column-2 column-2-xs flex">
